Prevent whitespace wrap in user options

--- a/styles/UserOptions.module.css
+++ b/styles/UserOptions.module.css
@@ -8,6 +8,7 @@
   width: fit-content;
   position: absolute;
   right: 0em;
+  white-space: nowrap;
 }
 
 .option {
